Fix: On n-topic-card "bell" and "pin" are not aligned  🐿 v2.11.0

--- a/components/pin-button/main.scss
+++ b/components/pin-button/main.scss
@@ -31,6 +31,10 @@
 	.o-tooltip {
 		min-width: 287px;
 	}
+
+	> form {
+		display: flex;
+	}
 }
 
 .myft-pin-button-wrapper.loading {
